--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^11.9",
         "laravel/slack-notification-channel": "^3.3",
         "laravel/tinker": "^2.9",
